# cpp_starter_project

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
src/: CMakeLists.txt  bspline_surface.h  main.cpp
src/app/: CMakeLists.txt  bspline_surface_app.cpp  main.cpp
src/lib/: CMakeLists.txt
src/lib/bspline_surface/: bspline_surface.h
src/lib/catch/: catch.hpp
src/test/: CMakeLists.txt  test_bspline_surface.cpp
src/test/catch/: catch.hpp
